--- a/ProjectRune/ProjectRune.Android/ProjectRune.Android.csproj
+++ b/ProjectRune/ProjectRune.Android/ProjectRune.Android.csproj
@@ -86,13 +86,16 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
+    <AndroidResource Include="Resources\drawable\Quests.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjectRune\ProjectRune.csproj">
       <Project>{C996708D-0FE7-4BB0-AF04-C94ADA98C35D}</Project>
       <Name>ProjectRune</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Skills.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
