Skills summary page

--- a/ProjectRune/ProjectRune.Android/ProjectRune.Android.csproj
+++ b/ProjectRune/ProjectRune.Android/ProjectRune.Android.csproj
@@ -103,5 +103,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Hamburger.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Defence.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Strength.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Attack.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
