--- a/ProjectRune/ProjectRune/ProjectRune.csproj
+++ b/ProjectRune/ProjectRune/ProjectRune.csproj
@@ -11,6 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\runescape_uf.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\runescape_uf.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
@@ -19,8 +27,8 @@
     <Compile Update="Views\QuickMenuView.xaml.cs">
       <DependentUpon>QuickMenuView.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\SkillDetailsView.xaml.cs">
-      <DependentUpon>SkillDetailsView.xaml</DependentUpon>
+    <Compile Update="Views\SkillsSummaryView.xaml.cs">
+      <DependentUpon>SkillsSummaryView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -31,7 +39,7 @@
     <EmbeddedResource Update="Views\QuickMenuView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\SkillDetailsView.xaml">
+    <EmbeddedResource Update="Views\SkillsSummaryView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
