--- a/ProjectRune/ProjectRune/ProjectRune.csproj
+++ b/ProjectRune/ProjectRune/ProjectRune.csproj
@@ -24,6 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Pages\MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\QuickMenuView.xaml.cs">
       <DependentUpon>QuickMenuView.xaml</DependentUpon>
     </Compile>
@@ -33,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Pages\SkillsPage.xaml">
+    <EmbeddedResource Update="Pages\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\QuickMenuView.xaml">
