--- a/ProjectRune/.editorconfig
+++ b/ProjectRune/.editorconfig
@@ -2,3 +2,12 @@
 
 # IDE0011: Add braces
 csharp_prefer_braces = false
+
+# IDE0025: Use expression body for properties
+csharp_style_expression_bodied_properties = false
+
+# IDE0059: Unnecessary assignment of a value
+csharp_style_unused_value_assignment_preference = unused_local_variable
+
+# IDE0022: Use block body for methods
+dotnet_diagnostic.IDE0022.severity = none
