--- a/ProjectRune/ProjectRune/ProjectRune.csproj
+++ b/ProjectRune/ProjectRune/ProjectRune.csproj
@@ -27,6 +27,9 @@
     <Compile Update="Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\QuickActionView.xaml.cs">
+      <DependentUpon>QuickActionView.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\QuickMenuView.xaml.cs">
       <DependentUpon>QuickMenuView.xaml</DependentUpon>
     </Compile>
@@ -40,6 +43,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\InventoryView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\QuickActionView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\QuickMenuView.xaml">
